<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2021 The Android Open Source Project.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Mars Photos</string>
    <string name="bottomlogin_text">Tổng đài chăm sóc khách hàng</string>
    <string name="phone_service">088888888</string>
    <string name="rules">Tôi đã đọc và đồng ý với các điều khoản của MyTV</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ID_acount">ID Tài Khoản</string>
    <string name="Name">Tên</string>
    <string name="Email">Email</string>
    <string name="hello">Xin Chào</string>

</resources>