<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    >

    <data>
        <variable
            name="viewmodel_login"
            type="com.example.android.marsphotos.ui.auth.AuthViewModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/background"
        android:gravity="center"
        tools:context=".ui.auth.LoginActivity">




        <TextView
            android:layout_gravity="center"
            android:text="Đăng Nhập"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Vui lòng nhập tài khoản của bạn"
            android:layout_marginTop="5dp"
            ></TextView>

        <RelativeLayout

            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            >




            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                >

                <EditText
                    android:text="@={viewmodel_login.email}"
                    android:id="@+id/username"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="Tên đăng nhập / Số điện thoại"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>




        </RelativeLayout>
        <RelativeLayout

            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            >




            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                app:passwordToggleEnabled="true">

                <EditText
                    android:text="@={viewmodel_login.password}"
                    android:id="@+id/login_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="Mật khẩu"
                    android:inputType="textPassword"
                    android:padding="10dp"

                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <!--        <ImageView-->
            <!--            android:padding="10dp"-->
            <!--            android:layout_centerVertical="true"-->
            <!--            android:layout_alignParentEnd="true"-->
            <!--            android:layout_width="40dp"-->
            <!--            android:layout_height="40dp"-->
            <!--            android:src="@drawable/baseline_remove_red_eye_24">-->

            <!--        </ImageView>-->

        </RelativeLayout>

        <TextView
            android:id="@+id/forgetpass"
            android:layout_gravity="end"
            android:text="Quên mật khẩu"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:textColor="#F85F53"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ></TextView>

        <androidx.appcompat.widget.AppCompatButton

            android:onClick="@{() -> viewmodel_login.onButtonLoginClick()}"           android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:text="Đăng Nhập"
            android:textAllCaps="false"
            android:layout_marginTop="40dp"
            android:background="@color/white_gradient" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"

            >


            <TextView
                android:id="@+id/orTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/rules"
                android:textColor="@color/black"
                android:textSize="12sp">

            </TextView>



        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="40dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottomlogin_text"></TextView>

            <TextView
                android:id="@+id/registerNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/phone_service"
                android:textColor="#F85F53"
                android:textStyle="bold"></TextView>
        </LinearLayout>
        
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_gravity="center_horizontal|center_vertical"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</layout>

